# file-transfer-iroh

./: Cargo.toml  README.md  dist-workspace.toml  flake.nix
src/: iroh_client.rs  main.rs
src/ui/: main_panel.rs  mod.rs  receive_panel.rs  send_panel.rs
wix/: main.wxs
